--- a/code/drive/BERT_espanol.ipynb
+++ b/code/drive/BERT_espanol.ipynb
@@ -605,7 +605,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "alba",
    "language": "python",
    "name": "python3"
   },
@@ -619,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
